# Projet_description_image

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  test_transf.py
Preprocessing/: COCO_caption.py  Images.py  Text.py
Web/: front_end.html
compile_model/: prediction.py  run.py
config/: config.yml
loading/: load_data.py
lodading/: load_data.py
models/: CNN_model.py  Embedding.py  LSTM_model.py  my_model.py  pretrained_model.py  t.py
models/CCN_LSTM/: CNN_model.py  Embedding.py  LSTM_model.py  my_model.py
models/Transformer/: Positional_enc.py  VIT.py  patch_encod.py  see_dif_step.py  transformer_dec.py  transformer_encoder.py
models/Transformer/Inference/: BLEU_score.py
models/Transformer/Train/: train_transformer_model.py
models/Transformer/loss/: mask_loss_acc.py
models/Transformer/transformer_subpart/: Positional_enc.py  classifier.py  patcher_imp.py  transformer_dec.py  transformer_encoder.py
run_models/: run.py
utils/: Tokenizer.py  dump_tokens.py  load_data.py
